--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,10 @@ repositories {
     mavenCentral()
 }
 
+dependencies {
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.2.0'
+}
+
+
+
 
