--- a/APTM Project/app/build.gradle
+++ b/APTM Project/app/build.gradle
@@ -30,15 +30,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.2.0'
-
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-core:3.0.0'
 }
 
 repositories {
     mavenCentral()
-}
-
-dependencies {
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.2.0'
 }
 
 
